# ai-med-portfolio

./: .gitignore  README.md
classical-ml/diabetes-regression/: main.py
projects/dl/agent/ai-receptionist/: README.md  pyproject.toml
projects/dl/agent/ai-receptionist/src/: graph.py  main.py  prompt.py  state.py  tools.py
projects/dl/agent/mcp-ai-research-assistant/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
projects/dl/agent/mcp-ai-research-assistant/app/: config.py
projects/dl/agent/mcp-ai-research-assistant/app/application/agents/: document_agent.py
projects/dl/agent/mcp-ai-research-assistant/app/application/use_cases/: ask_question.py  ingest_document.py  summarize_document.py
projects/dl/agent/mcp-ai-research-assistant/app/domain/: entities.py  exceptions.py  ports.py
projects/dl/agent/mcp-ai-research-assistant/app/infrastructure/document_loader/: file_text_extractor.py
projects/dl/agent/mcp-ai-research-assistant/app/infrastructure/llm/: extractive_document_summarizer.py  fake_answer_generator.py  groq_answer_generator.py  groq_document_summarizer.py
projects/dl/agent/mcp-ai-research-assistant/app/infrastructure/mcp/: server.py
projects/dl/agent/mcp-ai-research-assistant/app/infrastructure/vector_store/: in_memory_chunk_repo.py  in_memory_vector_store.py  qdrant_vector_store.py  sentence_transformer_embedding_generator.py  simple_hash_embedding_generator.py  simple_keyword_retriever.py  simple_text_chunker.py  simple_vector_retriever.py
projects/dl/agent/mcp-ai-research-assistant/app/interfaces/api/: dependencies.py  main.py  routes.py  schemas.py
projects/dl/agent/mcp-ai-research-assistant/mcp/: mcp_config.example.json
projects/dl/agent/mcp-ai-research-assistant/tests/api/: test_ask_question.py  test_ingest_document.py
projects/dl/agent/mcp-ai-research-assistant/tests/unit/: test_ask_question_use_case.py  test_entities.py  test_ingest_doc_use_case.py  test_mcp_tools.py
projects/dl/agent/rag-agent/: README.md
projects/dl/clinical-nlp/medical-notes-multilabel-classification/: README.md  pyproject.toml
projects/dl/clinical-nlp/medical-notes-multilabel-classification/notebooks/: analyse_project.ipynb
projects/dl/clinical-nlp/medical-notes-multilabel-classification/src/: clinicalbert_pl.py
projects/dl/clinical-nlp/medical-notes-multilabel-classification/src/config/data/: data_default.yaml
projects/dl/clinical-nlp/medical-notes-multilabel-classification/src/config/model/: model_default.yaml
projects/dl/epigenetic-mark-cnn/: .gitignore  README.md
projects/dl/epigenetic-mark-cnn/notebooks/: epigenetic_mark.ipynb
projects/dl/genomics/epigenetic-mark-cnn/: pyproject.toml
projects/dl/imaging/medical-image-classification/: README.md
projects/dl/imaging/medical-image-diffusion/: README.md  pyproject.toml
projects/dl/imaging/medical-image-diffusion/notebooks/: analyse_project.ipynb
projects/dl/imaging/medical-image-diffusion/src/: datamodule.py  dataset.py  lightning_module.py  main.py  make_data.py
projects/dl/imaging/medical-image-diffusion/src/config/data/: data_default.yaml
projects/dl/imaging/medical-image-diffusion/src/config/model/: model_default.yaml
projects/dl/imaging/medical-image-diffusion/src/config/trainer/: trainer_default.yaml
projects/dl/imaging/medical-image-diffusion/src/config/wandb/: wandb_default.yaml
projects/dl/imaging/medical-image-segmentation/: pyproject.toml
projects/dl/imaging/medical-image-segmentation/notebooks/: analyse_project.ipynb
projects/dl/imaging/medical-image-segmentation/src/: convert_lits_to_npy.py  lightning_module.py
projects/dl/imaging/medical-image-segmentation/src/config/trainer/: trainer_default.yaml
projects/dl/imaging/medical-image-segmentation/src/config/wandb/: wandb_default.yaml
projects/dl/llc-disease-mlp/: README.md
projects/dl/llm-med-project/: README.md
projects/dl/llm-med-project/notebooks/: analyse_project.ipynb
projects/dl/llm-med-project/src/: datamodule.py  make_data.py  utils.py
projects/dl/llm/llm-med-project/: pyproject.toml
projects/dl/llm/llm-med-project/src/: lightning_module.py  main.py
projects/dl/llm/llm-med-project/src/config/data/: data_default.yaml
projects/dl/llm/llm-med-project/src/config/model/: model_default.yaml
projects/dl/llm/llm_med_from_scratch/: README.md  pyproject.toml
projects/dl/llm/llm_med_from_scratch/src/: datamodule.py  dataset.py  extract_pubmed.py  lightning_module.py  main.py  model.py  tokenizer_tobins.py  train_tokenizer_hf.py
projects/dl/llm/llm_med_from_scratch/src/config/data/: data_default.yaml
projects/dl/llm/llm_med_from_scratch/src/config/model/: model_default.yaml
projects/dl/llm/llm_med_from_scratch/src/config/trainer/: trainer_default.yaml
projects/dl/llm/llm_med_from_scratch/src/config/wandb/: wandb_default.yaml
projects/dl/medical-image-classification/: pyproject.toml
projects/dl/medical-image-segmentation/: .gitignore  README.md
projects/dl/medical-image-segmentation/src/: datamodule.py  dataset.py  main.py  utils.py
projects/dl/medical-notes-multilabel-classification/src/: datamodule.py  main.py  make_dataset.py  prepare_data.py
projects/dl/multimodal/multimodal-med-project/: README.md  pyproject.toml
projects/dl/multimodal/multimodal-med-project/notebooks/: analyse_project.ipynb
projects/dl/multimodal/multimodal-med-project/src/: datamodule.py  lightning_module.py  main.py
projects/dl/multimodal/multimodal-med-project/src/config/data/: data_default.yaml
projects/dl/multimodal/multimodal-med-project/src/config/model/: model_default.yaml
projects/dl/multimodal/multimodal-med-project/src/config/trainer/: trainer_default.yaml
projects/dl/multimodal/multimodal-med-project/src/config/wandb/: wandb_default.yaml
projects/dl/tabular/llc-disease-mlp/: pyproject.toml
projects/ml/breast-cancer-svm/: README.md  pyproject.toml
projects/ml/breast-cancer-svm/notebooks/: breast_cancer_svm.ipynb
projects/ml/diabetes-regression/: pyproject.toml
projects/ml/heart-failure-risk-classification/: README.md  pyproject.toml
(+13 files in other folders)
