[project]
name = "medical-image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "efficientnet-pytorch>=0.7.1",
    "ipykernel>=7.1.0",
    "kaggle>=1.8.3",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
