[project]
name = "mcp-ai-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1",
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.4",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.2",
    "pytest>=9.0.3",
    "python-multipart>=0.0.30",
    "qdrant-client>=1.18.0",
    "ruff>=0.15.14",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
