[project]
name = "mutlimodal-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "evaluate>=0.4.6",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pytorch-lightning>=2.6.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
    "wandb>=0.24.0",
]
